--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libzmq3-dev
+  - sudo apt-get install -y libluajit-5.1-2 libluajit-5.1-dev luajit
 
 install:
   - mkdir ./vendor && cd ./vendor
@@ -17,6 +17,6 @@ install:
   - wget "https://github.com/openresty/lua-nginx-module/archive/v0.9.16rc1.tar.gz" && tar -xf "v0.9.16rc1.tar.gz"
 
   - cd "nginx-${VER_NGINX}"
-  - ./configure --add-module=../.. --add-module=../lua-nginx-module-v0.9.16rc1
+  - ./configure --add-module=../.. --add-module=../lua-nginx-module-0.9.16rc1
 
 script: make
