--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libluajit-5.1-2 libluajit-5.1-dev luajit
+  - sudo apt-get install -y lua5.1 liblua5.1-0 liblua5.1-0-dev
 
 install:
   - mkdir ./vendor && cd ./vendor
