--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ compiler:
 
 # Supported combinations:
 env:
-  - VER_NGINX=1.8.1
-  - VER_NGINX=1.9.10
-  - VER_LUA_MODULE=0.10.0
+  matrix:
+    - VER_NGINX=1.8.1
+    - VER_NGINX=1.9.10
+    - VER_LUA_MODULE=0.10.0
 
 # Bleeding-edge:
 matrix:
   include:
-    - env: VER_NGINX=1.9.12
-      env: VER_LUA_MODULE=0.10.2
+    - env: VER_NGINX=1.9.12 VER_LUA_MODULE=0.10.2
 
 sudo: false
 
@@ -27,7 +27,7 @@ addons:
 install:
   - mkdir ./vendor && cd ./vendor
   - wget "http://nginx.org/download/nginx-${VER_NGINX}.tar.gz" && tar -xf "nginx-${VER_NGINX}.tar.gz"
-  - wget "https://github.com/openresty/lua-nginx-module/archive/v${$VER_LUA_MODULE}.tar.gz" && tar -xf "v${VER_LUA_MODULE}.tar.gz"
+  - wget "https://github.com/openresty/lua-nginx-module/archive/v${VER_LUA_MODULE}.tar.gz" && tar -xf "v${VER_LUA_MODULE}.tar.gz"
 
   - cd nginx-${VER_NGINX}
   - ./configure --add-module=../.. --add-module=../lua-nginx-module-${VER_LUA_MODULE}
